--- a/about us.html
+++ b/about us.html
@@ -253,6 +253,10 @@
             </div>
           </div>
         </footer> 
+        <!--Gstatic.com. (2024). Available at: https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTnzc990-mmGznOveb5yYcT1TikOOc05s0TvxCX9N1IxWMcrXsF [Accessed 22 May 2024].-->
+        <!--Gstatic.com. (2024). Available at: https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR2DuM7PSXk0_1ufjnZsE_m3C8FR3zbbBul9OYySrNIBZ3Cj3hy [Accessed 22 May 2024].-->
+        <!--Gstatic.com. (2024). Available at: https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRCo28uwewO0YvjWYNBQeeMJCfP3tmEjR8FzY1fmyog_jgrBrqK [Accessed 22 May 2024].-->
+        <!--Gstatic.com. (2024). Available at: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSw9IURThgDwJcfrpClYc0zyNUWcjt1oa9WHzVmxK4RhfPFoYWu [Accessed 22 May 2024].-->
 
     
 
