--- a/index.html
+++ b/index.html
@@ -236,14 +236,13 @@
         </div>
       </div>
     </footer> 
-    <!--Sculpted by Aimee (2024) Sculpted By Aimee | Buy Makeup Online | Cosmetics Online [Image]. Available at: https://sculptedbyaimee.com (Accessed: 9 May 2024).
-    Oh My Cream (2024) Best selling skincare products [Image]. Available at: https://www.excp.com/portfolio-detail/oh-my-cream.html (Accessed: 19 May 2024).
--->
-
-   
-
-        
-
+    <!--Muji.com. (2024). Available at: https://www.muji.com/img/feature/flagship/shanghai-hall-of-the-sun/shanghai-hall-of-the-sun6.jpg [Accessed 22 May 2024].-->
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6YlbaPoWde_X7OvbOsiYvz--_ePXFPnCYK93aAihAXSNqRz05 [Accessed 22 May 2024].-->
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTIffD6Qpz5eq6Evr0_J8p72mxlYv7ZZK-vo27b5jBwZDfYxny2 [Accessed 22 May 2024].-->
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqWmKXBhkuv5W2ad6A-FVENRhx6I9Z7L-6mBDg3hDIrga96Aur [Accessed 22 May 2024].-->
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ9KuYQmeEmhFscYWPv481MeA8HUw1Mpfgmpf_82uMUbXmNclrG [Accessed 22 May 2024].-->
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRgATYnuyGga98BTujLSUwCRN8iKAkBn4ELsd8x6E54PUOgDaRz [Accessed 22 May 2024].-->    
+    <!--Gstatic.com. (2024). Available at: https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRgATYnuyGga98BTujLSUwCRN8iKAkBn4ELsd8x6E54PUOgDaRz [Accessed 22 May 2024].-->
 
 </body>
 </html>
